--- a/DeleteMeConsoleApplication/DeleteMeConsoleApplication.csproj
+++ b/DeleteMeConsoleApplication/DeleteMeConsoleApplication.csproj
@@ -45,6 +45,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Resources\XMLData\GameEvents\Assists.xml" />
+    <Content Include="Resources\XMLData\GameEvents\Goals.xml" />
+    <Content Include="Resources\XMLData\GameEvents\RedCards.xml" />
+    <Content Include="Resources\XMLData\GameEvents\YellowCards.xml" />
+    <Content Include="Resources\XMLData\Persons\Coaches.xml" />
+    <Content Include="Resources\XMLData\Persons\Players.xml" />
+    <Content Include="Resources\XMLData\Leagues.xml" />
+    <Content Include="Resources\XMLData\Matches.xml" />
+    <Content Include="Resources\XMLData\Teams.xml" />
+  </ItemGroup>
+  <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
