--- a/KnatteliganWPF/KnatteliganWPF.csproj
+++ b/KnatteliganWPF/KnatteliganWPF.csproj
@@ -67,16 +67,23 @@
     <Compile Include="CreateLeagueWindow.xaml.cs">
       <DependentUpon>CreateLeagueWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPage.xaml.cs">
+      <DependentUpon>MainPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="ValidationRules\PersonNameValidationRule.cs" />
     <Compile Include="ValidationRules\PhoneNumberValidationRule.cs" />
     <Compile Include="ValidationRules\TeamNameValidationRule.cs" />
     <Compile Include="ValidationRules\LeagueNameValidationRule.cs" />
     <Compile Include="ValidationRules\PersonalNumberValidationRule.cs" />
+    <Page Include="MainPage.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="SetTeamSquadWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="SeriesScheduleWindow.xaml">
+    <Page Include="SeriesSchedulePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -116,20 +123,20 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="MatchProtocolWindow.xaml">
+    <Page Include="MatchProtocolPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SeriesScheduleWindow.xaml.cs">
-      <DependentUpon>SeriesScheduleWindow.xaml</DependentUpon>
+    <Compile Include="SeriesSchedulePage.xaml.cs">
+      <DependentUpon>SeriesSchedulePage.xaml</DependentUpon>
     </Compile>
     <Compile Include="ManageLeague.xaml.cs">
       <DependentUpon>ManageLeague.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MatchProtocolWindow.xaml.cs">
-      <DependentUpon>MatchProtocolWindow.xaml</DependentUpon>
+    <Compile Include="MatchProtocolPage.xaml.cs">
+      <DependentUpon>MatchProtocolPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
