--- a/KnatteliganWPF/KnatteliganWPF.csproj
+++ b/KnatteliganWPF/KnatteliganWPF.csproj
@@ -67,6 +67,7 @@
       <DependentUpon>AddTeamWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\IsEnabledConverter.cs" />
+    <Compile Include="Converters\IsSelectedMultiConverter.cs" />
     <Compile Include="Converters\MatchEventToStringConverter.cs" />
     <Compile Include="Converters\LeagueNameToStringConverter.cs" />
     <Compile Include="Converters\PersonNameToStringConverter.cs" />
