--- a/FootballLeagueManager/packages.config
+++ b/FootballLeagueManager/packages.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MahApps.Metro" version="1.3.0" targetFramework="net461" />
+  <package id="MahApps.Metro" version="1.4.0-ALPHA033" targetFramework="net461" />
 </packages>
