--- a/KnatteliganWPF/KnatteliganWPF.csproj
+++ b/KnatteliganWPF/KnatteliganWPF.csproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="package.config" />
+    <Content Include="packages.config" />
     <Content Include="Resources\XMLData\GameEvents\Assists.xml" />
     <Content Include="Resources\XMLData\GameEvents\Goals.xml" />
     <Content Include="Resources\XMLData\GameEvents\RedCards.xml" />
