--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -37,6 +37,7 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
+    <Compile Include="Annotations.cs" />
     <Compile Include="CustomExceptions\InvalidEmailException.cs" />
     <Compile Include="CustomExceptions\InvalidMatchDateException.cs" />
     <Compile Include="CustomExceptions\InvalidNumberOfTeamsException.cs" />
